--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "start": "node ./bin/www",
     "start_dev": "nodemon ./bin/www",
+    "test": "jest --watch",
     "docker": "docker-compose up --build",
     "migrate": "npx sequelize-cli db:migrate",
+    "migrate_undo": "npx sequelize-cli db:migrate:undo",
+    "migrate_undo_all": "npx sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all"
   },
   "dependencies": {
@@ -32,9 +35,14 @@
     "rand-token": "^1.0.1",
     "sequelize": "^6.21.3",
     "sequelize-auto": "^0.8.8",
+    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.4.0",
+    "jest": "^29.4.0",
     "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1"
   }
